teachers page was modified

--- a/app/views/teachers.html
+++ b/app/views/teachers.html
@@ -123,14 +123,14 @@
             </div>
         </div>
 
-        <div class="panel panel-white">
-            <div class="panel-heading clearfix">
+        <div class="x_panel">
+            <div class="x_title clearfix">
 
                 <div class="pull-left"> <h5>Registered Teachers ({{Teachers.length}})</h5></div>
                 <input class="form-control pull-right" data-ng-model="query" type="text" class="form-control empty" id="iconified" placeholder="&#xF002; Search.." style="width: 180px;height: 30px;font-family:Arial, FontAwesome">
 
             </div>
-            <div class="panel-body">
+            <div class="x_content">
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead>
