--- a/app/views/dashboard/main.html
+++ b/app/views/dashboard/main.html
@@ -1,7 +1,7 @@
 <div class="container body">
     <div class="main_container">
 
-        <sidebar></sidebar>
+        <sidebar style="background-color: #2A3F54;"></sidebar>
         <header></header>
 
 
