--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,10 +1,9 @@
 <div>
-    <a class="hiddenanchor" id="toregister"></a>
-    <a class="hiddenanchor" id="tologin"></a>
 
     <div id="wrapper">
-        <div id="login" class="animate form">
+
             <div class="login_content">
+
                 <form>
                     <h1>Login Form</h1>
                     <div>
@@ -17,22 +16,24 @@
                         <a class="btn btn-default submit" href="index.html">Log in</a>
 
                     </div>
+
                     <div class="clearfix"></div>
-                    <div class="separator">
+                    <br />
+                    <div>
+                        <h1><i style="font-size: 26px;"></i> MUSIC SCHOOL</h1>
 
-
-                        <div class="clearfix"></div>
-                        <br />
-                        <div>
-
-
-
-                        </div>
+                        <p>Semester 4 Database systems project</p>
                     </div>
+
+
+
+
                 </form>
                 <!-- form -->
+
             </div>
             <!-- content -->
+
         </div>
 
     </div>
