login modified and need more

--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -21,8 +21,8 @@
                     <br />
                     <div>
                         <h1><i style="font-size: 26px;"></i> MUSIC SCHOOL</h1>
-
                         <p>Semester 4 Database systems project</p>
+                        <img style="height: 200px" src="images/login%20art.png">
                     </div>
 
 
