student profile was smoothed

--- a/app/views/students/studentProfile.html
+++ b/app/views/students/studentProfile.html
@@ -1,9 +1,18 @@
+<div class="row">
+    <ol class="breadcrumb" style="background-color: transparent">
+        <li><a href="#/home"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li><a href="#/student"><i class="fa fa-group"></i> Student</a></li>
+        <li class="active"> Profile</li>
+    </ol>
+
+</div>
+
 <div role="main">
 
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>User Profile</h3>
+                <h3>Student Profile</h3>
             </div>
 
             <div class="title_right">
@@ -23,7 +32,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>User Report <small>Activity report</small></h2>
+                        <h2>User Report <small> Report</small></h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li><a href="#"><i class="fa fa-chevron-up"></i></a>
                             </li>
