events page was added2

--- a/app/views/events/events.html
+++ b/app/views/events/events.html
@@ -3,7 +3,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Projects <small>Listing design</small></h3>
+                <h3>Events <small> Description</small></h3>
             </div>
 
             <div class="title_right">
