--- a/public/views/students.html
+++ b/public/views/students.html
@@ -110,20 +110,27 @@
                                                    data-ng-model="address" type="text" placeholder="Address">
                                         </div>
                                     </div>
+
+                                    <div class="ln_solid"></div>
+
+                                    <div class="form-group">
+                                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+
+                                            <button type="button reset" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button class="btn btn-success" type="button"
+                                                    data-ng-disabled="!sID || !fullname || !sgender"
+                                                    data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </form>
                         </div>
-                        <div class="modal-footer" style="height: 2cm;">
 
 
-                            <div class="row form-group pull-right" style="padding-top: 10px;padding-right: 20px;">
 
-                                <button type="button reset" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
-                                <button class="btn btn-success btn-sm" type="button"
-                                        data-ng-disabled="!sID || !fullname || !sgender"
-                                        data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
-                            </div>
-                        </div>
+
+
                     </div>
                     <!-- /.modal-content -->
                 </div>
