student entry form was modified2 and working

--- a/public/views/students.html
+++ b/public/views/students.html
@@ -118,7 +118,7 @@
 
                                             <button type="button reset" class="btn btn-default" data-dismiss="modal">Close</button>
                                             <button class="btn btn-success" type="button"
-                                                    data-ng-disabled="!sID || !fullname || !sgender"
+                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender"
                                                     data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
                                         </div>
                                     </div>
