--- a/public/views/students.html
+++ b/public/views/students.html
@@ -24,7 +24,7 @@
                             <h4 class="modal-title" id="myModalLabel"> Add new Student</h4>
                         </div>
                         <div class="modal-body" >
-                            <form name="form" role="form" class="form-horizontal form-label-left" novalidate>
+                            <form data-parsley-validate data-parsley-trigger="keyup" name="form" role="form" class="form-horizontal form-label-left" novalidate>
                                 <div class="row" style="padding-left: 15px;">
 
 
@@ -32,9 +32,13 @@
                                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="ID">ID <span class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="ID" required="required" data-ng-model="sID" name="sID"
-                                                   integer minlength="7" data-minlength="7" maxlength="7"
+                                            <input type="text" id="ID"  data-ng-model="sID" name="sID"
+                                                   integer required ng-model-options="{ updateOn: 'blur' }" minlength="7" data-minlength="7" maxlength="7"
                                                    class="form-control col-md-7 col-xs-12">
+                                            <p ng-show="form.sID.$error.integer"> *should be a number</p>
+                                            <span style="color:red" ng-show="form.sID.$touched && form.sID.$invalid">
+                                            <span ng-show="form.sID.$error.required">*Username is required.</span>
+                                            </span>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -118,7 +122,7 @@
 
                                             <button type="button reset" class="btn btn-default" data-dismiss="modal">Close</button>
                                             <button class="btn btn-success" type="button"
-                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender"
+                                                    data-ng-disabled="!sID || !fullname || !sgender || !dob || !course || !accLevel || !sgender || !perGroup"
                                                     data-ng-click=" addStudent();" data-dismiss="modal"> Add Student</button>
                                         </div>
                                     </div>
